# STEVE-rov

./: README.md
src/camera/: .mjpeg_server.py.swp  camera.py  camera_metadata.py  color_detection.py  find_center_of_image.py  focus.py  h264_udp_stream.py  mjpeg_server.py  object_size.py  picam.py  picam_better.py  picamera_websocket.py
src/camera/websocket_html_test/: index.html  server.py  server1.py
src/client/: index.html  oogabooga.html  package.json
src/client/game-controller/: Cargo.toml
src/client/game-controller/src/: main.rs
src/client/src/: main.ts  style.css
src/client/src-tauri/: Cargo.toml  tauri.conf.json
src/electronix/depth/: depth.py
src/electronix/imu/: example.py  getData.py  imu.py
src/float/: main.py
src/float/www/: index.html
src/motors/: led_test.py  motor_test.py  pca9685_calibration.py
src/new-client/: index.html  sphere.glb
src/new-client/src/: index.html  main.js  style.css
src/photogrammetry/: MvgMvsPipeline.py  edit_exif_data.py  receive_images.py  scene.mvs  scene_dense.mvs  sensor_width_camera_database.txt  steve-photogrammetry.sh
src/photogrammetry/openMVG-bin/: main_svgSample  openMVG_main_AlternativeVO  openMVG_main_ChangeLocalOrigin  openMVG_main_ComputeClusters  openMVG_main_ComputeFeatures  openMVG_main_ComputeMatches  openMVG_main_ComputeSfM_DataColor  (+55 more)
src/rpi/: main.py  motors.py
src/tauri-client/: index.html  package-lock.json  package.json  tsconfig.json
src/test/: img.py  index.html  index1.html  picam.py  server.py
src/test/gamepad-test/: Cargo.toml
src/test/gamepad-test/src/: main.rs
(+20 files in other folders)
