[package]
name = "game-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
early_returns = "0.4.0"
gilrs = "0.10.1"
serde = { version = "1.0.159", features = ["serde_derive"] }
serde_json = "1.0.95"
tungstenite = "0.18.0"
url = "2.3.1"
